[package]
name = "app"
version = "0.1.0"
authors = ["Benjamin Hinchliff <benjamin.hinchliff@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.68"
console_log = { version = "0.2.0", features = ["color"] }
log = "0.4.11"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
