[package]
name = "app"
version = "0.1.0"
authors = ["Benjamin Hinchliff <benjamin.hinchliff@gmail.com>"]
edition = "2018"
description = "a mandelbrot set renderer written in WebGL and Rust (mostly)"
license = "MIT"
repository = "https://github.com/BenjaminHinchliff/webgl-mandelbrot.git"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.68"
console_error_panic_hook = "0.1.6"
js-sys = "0.3.45"

[dependencies.web-sys]
version = "0.3.4"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "HtmlCanvasElement",
  "WebGlRenderingContext",
  "WebGlUniformLocation",
  "WebGlShader",
  "WebGlProgram",
  "WebGlBuffer",
  "Node",
  "Window",
]
